# factorial

./: pyproject.toml
.github/workflows/: basetests.yaml
src/factorial/: __init__.py
tests/: test_factorial.py
