[project]
name = "factorial"
version = "0.1.0"
description = ""
authors = [
    {name = "F. Actorial", email = "f.actorial@example.com"}
]
readme = "README.md"

requires-python = ">=3.11,<4"
license = {text = "BSD-2-Clause"}
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest ~= 8.2.0",
]
